update the swagger docs
